--- a/Apache_demo.yml
+++ b/Apache_demo.yml
@@ -2,6 +2,8 @@
 - name: Install and configure apache demo
   hosts: all
   become: true
+  vars:
+    http_listen_port: 8080
   tasks:
   - include_role:
       name: apache
