--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -11,9 +11,13 @@
     src: index.html.j2
     dest: /var/www/html/index.html
 
+- name: copy Apache configuration file
+  template:
+    src: httpd.conf.j2
+    dest: /etc/httpd/conf/httpd.conf
+
 - name: ensure Apache is running
   service:
     name: httpd
     state: started
     enabled: true
-    
